fixed text alignment

--- a/src/styles.css
+++ b/src/styles.css
@@ -115,8 +115,15 @@ p {
   justify-content: left;
 }
 
-@media (max-width: 390px) {
-  h2 {
-    text-align: center;
+@media (min-width: 390px) {
+  .align-left {
+    text-align: left;
+  }
+  .align-right {
+    text-align: right;
+  }
+
+  h1 {
+    font-size: 60px;
   }
 }
